# Pielo2D

./: .gitignore  CMakeLists.txt  README.md
ext/LuaBridge/detail/: LuaHelpers.h
include/: Game.h  GameObject.h  Scene.h  conf.h
include/components/: CharacterController.h  Component.h  ComponentFactory.h  Script.h  SpriteRenderer.h
include/managers/: ComponentManager.h  InputManager.h  ResourceManager.h  SceneManager.h  ScriptManager.h
include/utils/: GameParser.h  Inputs.h  Logger.h  ScriptResource.h
src/: Game.cpp  GameObject.cpp  Scene.cpp  main.cpp
src/components/: CharacterController.cpp  Component.cpp  Script.cpp  SpriteRenderer.cpp
src/managers/: InputManager.cpp  ResourceManager.cpp  SceneManager.cpp  ScriptManager.cpp
src/utils/: GameParser.cpp
